Exposure value in Color Management should not be limited to 20 stops. #55949

Closed
opened 2018-07-12 09:39:38 +02:00 by Fabien · 8 comments

System Information
Windows 10 - GTX Titan X - i7 3930k

Blender Version
Broken: 2.79.4 nightly build

Short description of error
The Exposure value under Color Management has a limited range from -10 to 10, which is not enough to cover the large range of photographic exposure. I suggest to use -10, 10 as soft_min and soft_max for the slider, but not as hard min and max. Users should be able to input values outside of this range if needed.
I am making/using the Photographer add-on to control the exposure of my scenes using photographic exposure settings, and there are cases where the add-on would not be able to set the proper exposure value because of this limited range.

**System Information** Windows 10 - GTX Titan X - i7 3930k **Blender Version** Broken: 2.79.4 nightly build **Short description of error** The Exposure value under Color Management has a limited range from -10 to 10, which is not enough to cover the large range of photographic exposure. I suggest to use -10, 10 as soft_min and soft_max for the slider, but not as hard min and max. Users should be able to input values outside of this range if needed. I am making/using the Photographer add-on to control the exposure of my scenes using photographic exposure settings, and there are cases where the add-on would not be able to set the proper exposure value because of this limited range.
Author

Added subscriber: @chafouin

Added subscriber: @chafouin

This issue was referenced by 9a5fb0209e

This issue was referenced by 9a5fb0209e6e94112be4d390316933ab84e8e2df

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2018-07-12 12:04:01 +02:00

I've increased the range now because it can be useful in some cases, but I would advise against setting up lighting so that it requires such small/large exposure. You'll get really poor float precision in rendering and compositing.

Unlike in the real world, in rendering the time the shutter is open does not control the brightness of images, it only controls the amount of motion blur. I can see it would be useful to be able to control settings as on a real camera, but this does not require the actual render and compositing to be performed with very small/large values.

I've increased the range now because it can be useful in some cases, but I would advise against setting up lighting so that it requires such small/large exposure. You'll get really poor float precision in rendering and compositing. Unlike in the real world, in rendering the time the shutter is open does not control the brightness of images, it only controls the amount of motion blur. I can see it would be useful to be able to control settings as on a real camera, but this does not require the actual render and compositing to be performed with very small/large values.
Author

Fair point. I will be using EV 8 as the exposure 0 in Blender as it should be a good default for most lighting scenarios.
In the long run, instead of using the Exposure viewport transform, what about pre-exposing the render with the camera settings? It won't be updating in realtime unfortunately, but then you could make sure to maximize precision without having to change all lights intensities? Is that maybe what the Film Exposure is for?

Thanks a lot for the very quick fix, happy to have you back at the Foundation :)

Fair point. I will be using EV 8 as the exposure 0 in Blender as it should be a good default for most lighting scenarios. In the long run, instead of using the Exposure viewport transform, what about pre-exposing the render with the camera settings? It won't be updating in realtime unfortunately, but then you could make sure to maximize precision without having to change all lights intensities? Is that maybe what the Film Exposure is for? Thanks a lot for the very quick fix, happy to have you back at the Foundation :)

I don't think pre-exposing the render would help precision. It's not clear to me how you get to values that need exposure outside -10 to 10 in typical cases, normally when you set aperture and shutter speed on a camera it's done in a way that they mostly cancel out, so the resulting exposure value in Blender would be relatively small.

I don't think pre-exposing the render would help precision. It's not clear to me how you get to values that need exposure outside -10 to 10 in typical cases, normally when you set aperture and shutter speed on a camera it's done in a way that they mostly cancel out, so the resulting exposure value in Blender would be relatively small.
Author

If done correctly, one should not need to go outside of this range to get a properly exposed image. However, to make sure that my HDRi has all the range for instance, I sometimes want to push the EV up to 25, 26.
And then there is also the fact that people may change camera settings to weird settings, and not see any exposure change happen, and will think it's broken. I think it's better to have it always work, even if it's wrong settings.
I agree with that -10, 10 range, that why I think they should stay like this as soft_min and soft_max of the slider :)

If done correctly, one should not need to go outside of this range to get a properly exposed image. However, to make sure that my HDRi has all the range for instance, I sometimes want to push the EV up to 25, 26. And then there is also the fact that people may change camera settings to weird settings, and not see any exposure change happen, and will think it's broken. I think it's better to have it always work, even if it's wrong settings. I agree with that -10, 10 range, that why I think they should stay like this as soft_min and soft_max of the slider :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55949
No description provided.