Fix T55949: increase color management exposure hard range.